--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -132,6 +132,15 @@ cite, em {
 	font-style: italic;
 }
 
+kbd {
+	background-color: #fdfdfd;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 0.3em;
+	font-family: monospace;
+	font-size: 1.25em;
+	padding: 0.2em;
+}
+
 p {
 	margin: 20px 0;
 }
