--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -453,6 +453,10 @@ input.error, select.error, textarea.error {
 	overflow: hidden;
 }
 
+.form-field > input[type='file'] {
+	margin-top: 0;
+}
+
 .buttons {
 	clear: both;
 	padding-top: 20px;
