Autoload and init TinyMCE based on data-html-editor attribute.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -445,6 +445,10 @@ textarea {
 	width: 100%;
 }
 
+textarea[data-html-editor='true'] {
+	visibility: hidden;
+}
+
 input.error, select.error, textarea.error {
 	background-color: #ff9;
 }
