Limit width of file inputs.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -459,6 +459,7 @@ input.error, select.error, textarea.error {
 
 .form-field > input[type='file'] {
 	margin-top: 0;
+	max-width: 220px;
 }
 
 .buttons {
