--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -843,10 +843,14 @@ input.error, select.error, textarea.error {
  * Header/Headings
  * -------------------------------------------------- */
 
+h1, h2, h3, h4 {
+	clear: both;
+	font-weight: bold;
+}
+
 h1 {
 	border-bottom: 1px dotted #808080;
 	font-size: 1.5em;
-	font-weight: bold;
 	line-height: 1em;
 	margin: 0 -10px;
 	padding: 0 10px 4px;
@@ -855,7 +859,6 @@ h1 {
 h2 {
 	border-bottom: 1px dotted #808080;
 	font-size: 1.17em;
-	font-weight: bold;
 	padding: 0 10px 2px;
 }
 
@@ -870,12 +873,7 @@ h1 > a:hover, h2 > a:hover {
 
 h3 {
 	font-size: 1.08em;
-	font-weight: bold;
 	padding: 0 10px 2px;
-}
-
-h4 {
-	font-weight: bold;
 }
 
 .heading-addon {
