Style the modals.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -497,7 +497,7 @@ input.error, select.error, textarea.error {
 	margin-right: 0;
 }
 
-#form-error {
+form > .error {
 	padding-left: 155px;
 }
 
@@ -572,6 +572,22 @@ input.error, select.error, textarea.error {
 	margin: 20px;
 	overflow: hidden;
 	position: relative;
+}
+
+#modal {
+	background-color: rgba(238, 238, 238, 0.8);
+	display: none;
+	height: 100%;
+	left: 0;
+	overflow: auto;
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
+
+#modal-container {
+	margin: auto;
+	width: 80%;
 }
 
 @media (max-width: 800px) {
