--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1010,30 +1010,35 @@ h3 {
  * -------------------------------------------------- */
 
 @media print {
-	.hidden-print {
-		display: none !important;
-	}
-
-	.visible-print {
-		display: inherit;
-	}
-
-	#content-wrapper {
-		margin: 0;
-		top: 0;
+	html,
+	body {
+		background-color: white;
 	}
 
 	#header, #navigation {
 		display: none;
 	}
 
+	#content-wrapper,
 	#wrapper {
 		margin: 0;
+	}
+
+	#site-title {
+		width: 100%;
 	}
 
 	.content {
 		border: none;
 		box-shadow: none;
 		margin: 0;
+	}
+
+	.hidden-print {
+		display: none !important;
+	}
+
+	.visible-print {
+		display: inherit;
 	}
 }
