--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -352,16 +352,17 @@ div.label {
 	.visible-tablet {
 		display: inherit;
 	}
-
-	.visual-left, .visual-right {
-		margin: 20px auto;
-		max-width: 100%;
-	}
 }
 
 @media screen and (max-width: 640px) {
 	.hidden-tablet-portrait {
 		display: none;
+	}
+
+	.visual-left, .visual-right {
+		float: none;
+		margin: 20px auto;
+		max-width: 100%;
 	}
 }
 
