Add breakpoint reference.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,7 @@
 /* --------------------------------------------------
  * Table of Contents
  *
+ *  -> Breakpoints
  *  -> Color Reference
  *  -> Resets
  *  -> Global Styles
@@ -12,6 +13,10 @@
  *  -> Admin
  *  -> 3rd-Party Elements
  *  -> Print
+ * -------------------------------------------------- */
+
+/* --------------------------------------------------
+ * Breakpoints: 420px, 520px, 640px, 800px
  * -------------------------------------------------- */
 
 /* --------------------------------------------------
