--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -570,9 +570,10 @@ form > .error {
 	border: 1px solid #808080;
 	border-radius: 10px;
 	box-shadow: 2px 3px 5px;
+	clear: right;
 	line-height: 2em;
 	margin: 30px 20px;
-/*	overflow: visible; */
+	overflow: auto;
 	padding: 30px;
 }
 
@@ -624,7 +625,7 @@ form > .error {
 
 	.content {
 		margin: 20px 0;
-		padding: 20px 10px;
+		padding: 10px;
 	}
 }
 
