--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -650,7 +650,8 @@ form > .error {
 	display: block;
 	height: 30px;
 	line-height: 2.5em;
-	padding: 2px 10px 2px 53px;
+	margin-top: 5px;
+	padding: 2px 10px 7px 53px;
 	text-decoration: none;
 	vertical-align: middle;
 }
@@ -668,7 +669,7 @@ form > .error {
 #menu-primary {
 	letter-spacing: 0.1em;
 	list-style: none;
-	margin-top: 90px;
+	margin-top: 85px;
 	padding-left: 7px;
 	text-transform: uppercase;
 	width: 140px;
@@ -761,7 +762,7 @@ form > .error {
 	}
 
 	#menu-primary {
-		margin-top: 85px;
+		margin-top: 80px;
 		text-align: center;
 		width: 85px;
 	}
@@ -812,6 +813,7 @@ form > .error {
 	.menu-item {
 		height: 30px;
 		line-height: 2.5em;
+		margin-top: 0;
 		overflow: hidden;
 		padding: 2px 0 2px 36px;
 	}
