Mark responsive hiding as important.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -355,7 +355,7 @@ div.label {
 	}
 
 	.hidden-tablet {
-		display: none;
+		display: none !important;
 	}
 
 	.visible-tablet {
@@ -365,7 +365,7 @@ div.label {
 
 @media screen and (max-width: 640px) {
 	.hidden-tablet-portrait {
-		display: none;
+		display: none !important;
 	}
 
 	.visual-left, .visual-right {
@@ -381,7 +381,7 @@ div.label {
 	}
 
 	.hidden-phone {
-		display: none;
+		display: none !important;
 	}
 
 	.visible-phone {
@@ -395,7 +395,7 @@ div.label {
 
 @media screen and (max-width: 420px) {
 	.hidden-phone-portrait {
-		display: none;
+		display: none !important;
 	}
 
 	.visible-phone-portrait {
