--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -457,6 +457,18 @@ input[type='checkbox'] {
 	margin-top: 5px;
 }
 
+input[type='checkbox']:first-child {
+	float: left;
+}
+
+input[type='checkbox'] + label {
+	display: block;
+	float: none;
+	margin: 1px 10px 0 30px;
+	text-align: left;
+	width: auto;
+}
+
 input[type='file'] {
 	max-width: 220px;
 }
