--- a/public/styles/all.css
+++ b/public/styles/all.css
@@ -1,3 +1,5 @@
+
+/* The core theme CSS file. */
 @import url(/styles/cwa-site.css);
 
 /* Create and import a CSS file specific to your site for all overrides and additions. */
