--- a/public/styles/cwa-site.css
+++ b/public/styles/cwa-site.css
@@ -225,6 +225,19 @@ td > .actions {
 	padding-left: 20px;
 }
 
+.icon {
+	background: url(/images/icons.png) no-repeat scroll 0 0 transparent;
+	display: inline-block;
+	height: 28px;
+	margin-left: 10px;
+	vertical-align: middle;
+	width: 24px;
+}
+
+.icon-email {
+	background-position: right -330px;
+}
+
 .error {
 	color: #f00;
 }
@@ -673,9 +686,15 @@ input.long {
  * -------------------------------------------------- */
 
 .menu {
-	clear: left;
-	float: left;
-	margin: 20px 0 20px 10px;
+	margin: 30px 0;
+}
+
+.menu > h5 {
+	display: inline-block;
+	font-size: 1.17em;
+	height: 2em;
+	line-height: 2em;
+	vertical-align: middle;
 }
 
 .menu-item {
@@ -698,14 +717,16 @@ input.long {
 
 #navigation {
 	position: absolute;
+	text-align: center;
 	top: 75px;
 }
 
 #menu-primary {
 	letter-spacing: 0.1em;
 	list-style: none;
-	margin-top: 85px;
-	padding-left: 7px;
+	margin: 85px auto 30px;
+	padding: 0;
+	text-align: left;
 	text-transform: uppercase;
 	width: 140px;
 }
@@ -772,6 +793,18 @@ input.long {
 		padding: 26px 10px 2px;
 	}
 
+	.menu > h5 {
+		display: block;
+	}
+
+	.menu > .icon:first-of-type {
+		margin-left: 0;
+	}
+
+	#navigation {
+		left: 15px;
+	}
+
 	#menu-primary {
 		margin-top: 80px;
 		text-align: center;
@@ -814,6 +847,15 @@ input.long {
 		margin-top: 0;
 		overflow: hidden;
 		padding: 2px 0 2px 36px;
+	}
+
+	.menu > .icon {
+		display: block;
+		margin: 0 auto !important;
+	}
+
+	#navigation {
+		left: 10px;
 	}
 
 	#menu-primary {
